--- a/face_processing_test.ipynb
+++ b/face_processing_test.ipynb
@@ -76,6 +76,7 @@
         "\n",
         "from os.path import join\n",
         "from os import listdir\n",
+        "import shutil\n",
         "import random\n",
         "from IPython.utils import io\n",
         "import tensorflow as tf\n",
@@ -109,7 +110,7 @@
       "source": [
         " ! cp \"/content/drive/My Drive/Speech2Face/zippedFaces.tar.gz\" /content\n",
         " ! tar zxvf zippedFaces.tar.gz\n",
-        " ! rm zippedFaces.tar.gz\n"
+        " ! rm zippedFaces.tar.gz"
       ],
       "execution_count": null,
       "outputs": []
@@ -350,6 +351,96 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "9e6_B1xhgs-i",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def mkdir_s(dir_name):\n",
+        "  if not os.path.exists(dir_name):\n",
+        "    os.makedirs(dir_name)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d5I6X6jkf7TO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "PICS_PER_ACTOR = 10\n",
+        "\n",
+        "tot_taken = 0\n",
+        "tot_images = 0\n",
+        "\n",
+        "new_dir = \"filtered_unzippedFaces\"\n",
+        "\n",
+        "for i in tqdm(range(len(data_points))):\n",
+        "  dir = data_points[i]\n",
+        "\n",
+        "  s = join(datasetPath, dir+\"/1.6/\")\n",
+        "  s_out = join(new_dir, dir+\"/1.6/\")\n",
+        "\n",
+        "  videos = listdir(s)\n",
+        "\n",
+        "  pics_per_video = len(videos) // PICS_PER_ACTOR\n",
+        "  taken\n",
+        "\n",
+        "  for subdir in videos:\n",
+        "    #print(subdir)\n",
+        "    t = join(s, subdir)\n",
+        "    t_out = join(s_out, subdir)\n",
+        "\n",
+        "    for image in listdir(t):\n",
+        "\n",
+        "      image_path = join(t, image)\n",
+        "      #print(image_path)\n",
+        "\n",
+        "      tot_images += 1\n",
+        "      #print(full_path)\n",
+        "\n",
+        "      try:\n",
+        "          with io.capture_output() as captured:\n",
+        "            out = DeepFace.analyze(image_path, actions=['emotion'])\n",
+        "            DeepFace.\n",
+        "        \n",
+        "      except:\n",
+        "        os.remove(image_path)\n",
+        "        #print(\"removed\", image_path)\n",
+        "        tot_deleted += 1\n",
+        "        continue\n",
+        "      \n",
+        "      if (out['dominant_emotion'] != 'neutral'):\n",
+        "        os.remove(image_path)\n",
+        "        tot_deleted += 1\n",
+        "\n",
+        "\n",
+        "print(\"Total images:\", tot_images)\n",
+        "print(\"Total_deleted:\", tot_deleted)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "abm_pkuFhcId",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!cp /content/drive/My\\ Drive/Speech2Face/filtered_unzippedFaces.zip .\n",
+        "!unzip filtered_unzippedFaces.zip"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "RPcvoH0zN7mH",
         "colab_type": "code",
         "colab": {}
@@ -477,6 +568,84 @@
         "! zip -r face_features_neutral_prefiltered.zip Face_Feature/ \n",
         "! cp face_features_neutral_prefiltered.zip /content/drive/My\\ Drive/Speech2Face/\n",
         "! rm -r Face_Feature/"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_Q_bZ7TFlm6H",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!pip install head-pose"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tcJvYoRyoWEf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import os\n",
+        "\n",
+        "import cv2\n",
+        "import numpy as np\n",
+        "\n",
+        "from head_pose import face\n",
+        "face.face_detector = \"\"\n",
+        "\n",
+        "from head_pose import get_points_from_landmarks, HeadPoseEstimator\n",
+        "from head_pose.face import face_68_landmarks\n",
+        "\n",
+        "\n",
+        "def estimate(image_file, mode='nose_2eyes'):\n",
+        "    im = cv2.imread(image_file)\n",
+        "    landmarks = face_68_landmarks(im)\n",
+        "    height, width = im.shape[:2]\n",
+        "    print(height, width)\n",
+        "\n",
+        "    colors = [(255, 0, 0), (0, 255, 0), (0, 0, 255), (0, 255, 255), (255, 255, 0), (255, 125, 125)]\n",
+        "\n",
+        "    pose_estimator = HeadPoseEstimator(image_size=(height, width), mode=mode)\n",
+        "    for marks in landmarks:\n",
+        "        # for pnt in marks:\n",
+        "        #     cv2.circle(im, (int(pnt[0]), int(pnt[1])), 1, (0, 255, 0), 2, cv2.LINE_AA)\n",
+        "        image_points = get_points_from_landmarks(marks, mode)\n",
+        "        print('========len======== : ', len(image_points))\n",
+        "        print('========   ======== : ', image_points)\n",
+        "        rotation_vector, translation_vector = pose_estimator.solve_pose(image_points)\n",
+        "        print('-------------------------\\n', rotation_vector, '||||\\n', translation_vector,\n",
+        "              '\\n-------------------------\\n')\n",
+        "        end_points_2d = pose_estimator.projection(rotation_vector, translation_vector)\n",
+        "\n",
+        "        for i, pnt in enumerate(image_points.tolist()):\n",
+        "            cv2.circle(im, (int(pnt[0]), int(pnt[1])), 1, colors[i % 6], 3, cv2.LINE_AA)\n",
+        "\n",
+        "        end_points_2d = np.array(end_points_2d).astype(np.int).tolist()\n",
+        "        cv2.line(im, tuple(end_points_2d[5]), tuple(end_points_2d[6]), (0, 255, 0))\n",
+        "        cv2.line(im, tuple(end_points_2d[6]), tuple(end_points_2d[7]), (255, 0, 0))\n",
+        "        cv2.line(im, tuple(end_points_2d[2]), tuple(end_points_2d[6]), (0, 0, 255))\n",
+        "    return im\n",
+        "    # cv2.imshow('im', im)\n",
+        "    # cv2.waitKey(0)\n",
+        "    # cv2.destroyAllWindows()\n",
+        "\n",
+        "\n",
+        "OUTPUT = 'output_nose_2eyes_02'\n",
+        "\n",
+        "\n",
+        "def test(mode='nose_eyes_mouth'):\n",
+        "  im = estimate(im_f, mode)\n",
+        "  cv2_imshow(im)\n",
+        "\n",
+        "test('/content/unzippedFaces/A.J._Buckley/1.6/1zcIwhmdeo4/0000375.jpg')"
       ],
       "execution_count": null,
       "outputs": []
