Added code to rearrange the pictures according to the celebrity name

--- a/face_processing.ipynb
+++ b/face_processing.ipynb
@@ -485,6 +485,63 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UhHNdGGHQwKD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!cp /content/drive/My\\ Drive/Speech2Face/face_features_neutral_20.zip .\n",
+        "\n",
+        "!unzip face_features_neutral_20.zip"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9QjFbpSKQWQR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import shutil\n",
+        "\n",
+        "images_path = '/content/Face_Feature/Faces'\n",
+        "out_path = '/content/Faces_rearranged'\n",
+        "\n",
+        "def rearrange_pictures():\n",
+        "  for image in os.listdir(images_path):\n",
+        "    full_path = os.path.join(images_path, image)\n",
+        "    actor_name = image[:image.rindex('_')]\n",
+        "  \n",
+        "    actor_folder = os.path.join(out_path, actor_name)\n",
+        "    #print(actor_folder)\n",
+        "    \n",
+        "    if not os.path.exists(actor_folder):\n",
+        "      os.makedirs(actor_folder)\n",
+        "    shutil.move(full_path, actor_folder)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vSG9Uw_wQwy3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!zip -r preprocessed_faces_rearranged.zip /content/Faces_rearranged\n",
+        "!cp preprocessed_faces_rearranged.zip /content/drive/My\\ Drive/Speech2Face/"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
