Added Hopenet support

--- a/face_processing.ipynb
+++ b/face_processing.ipynb
@@ -35,7 +35,7 @@
       "source": [
         "! pip install openface\n",
         "! pip3 install face_recognition\n",
-        "! pip install deepface\n",
+        "#! pip install deepface\n",
         "\n",
         "\n",
         "\n",
@@ -63,7 +63,7 @@
         "from tqdm import tqdm\n",
         "from google.colab.patches import cv2_imshow\n",
         "import cv2\n",
-        "from deepface import DeepFace\n",
+        "#from deepface import DeepFace\n",
         "import sys"
       ],
       "execution_count": null,
@@ -79,6 +79,21 @@
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b5rDKwE4EB_V",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# !rm -r Face_Feature/\n",
+        "# !rm -r Faces_rearranged/\n",
+        "# !rm face_features*.zip"
       ],
       "execution_count": null,
       "outputs": []
@@ -138,6 +153,7 @@
         "        self.fc8 = nn.Linear(in_features=4096, out_features=2622, bias=True)\n",
         "\n",
         "    def forward(self, x0, is_fc8=False):\n",
+        "      if not is_fc8:\n",
         "        x1 = self.conv1_1(x0)\n",
         "        x2 = self.relu1_1(x1)\n",
         "        x3 = self.conv1_2(x2)\n",
@@ -176,11 +192,11 @@
         "        x35 = self.fc7(x34)\n",
         "        x36 = self.relu7(x35)\n",
         "        x37 = self.dropout7(x36)\n",
-        "        if is_fc8:\n",
-        "            x38 = self.fc8(x37)\n",
-        "        else:\n",
-        "            x38 = x37\n",
-        "        return x38\n",
+        "        x38 = x37\n",
+        "      else:\n",
+        "        x38 = self.fc8(x0)\n",
+        "\n",
+        "      return x38\n",
         "\n",
         "\n",
         "def vgg_face_dag(weights_path=None, **kwargs):\n",
@@ -311,13 +327,51 @@
         "colab": {}
       },
       "source": [
-        "# ! git clone https://github.com/OverEuro/deep-head-pose-lite.git\n",
-        "# ! mv deep-head-pose-lite dhpl\n",
+        "! git clone https://github.com/OverEuro/deep-head-pose-lite.git\n",
+        "! mv deep-head-pose-lite dhpl\n",
         "from dhpl import stable_hopenetlite\n",
         "pos_net = stable_hopenetlite.shufflenet_v2_x1_0()\n",
         "saved_state_dict = torch.load('dhpl/model/shuff_epoch_120.pkl', map_location=\"cpu\")\n",
         "pos_net.load_state_dict(saved_state_dict, strict=False)\n",
         "pos_net.eval()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D1Qh9YEyExhC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#!git clone https://github.com/natanielruiz/deep-head-pose.git\n",
+        "#!mv deep-head-pose/ dhp\n",
+        "\n",
+        "#!cp /content/drive/My\\ Drive/Speech2Face/hopenet_robust_alpha1.pkl ."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "izNfNfCAF0fm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from dhp.code import hopenet\n",
+        "import torchvision\n",
+        "\n",
+        "saved_state_dict = torch.load('/content/hopenet_robust_alpha1.pkl', map_location=\"cpu\")\n",
+        "#print(saved_state_dict.keys())\n",
+        "hopenet_model = hopenet.Hopenet(torchvision.models.resnet.Bottleneck, [3, 4, 6, 3], 66)\n",
+        "hopenet_model.load_state_dict(saved_state_dict, strict=False)\n",
+        "hopenet_model.eval()\n",
+        "\n",
+        "pos_net = hopenet_model"
       ],
       "execution_count": null,
       "outputs": []
@@ -349,25 +403,43 @@
         "    result = torch.div(result, torch.sum(result, 1).unsqueeze(1).expand_as(result))\n",
         "    return result\n",
         "\n",
+        "\n",
         "transformations = transforms.Compose([transforms.Scale(224),\n",
         "    transforms.CenterCrop(224), transforms.ToTensor(),\n",
         "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])])\n",
-        "input = transformations(img)\n",
-        "yaw, pitch, roll = pos_net(input.unsqueeze(0))\n",
-        "idx_tensor = torch.arange(66,dtype=torch.float)\n",
-        "# _, yaw_bpred = torch.max(yaw.data, 1)\n",
-        "# _, pitch_bpred = torch.max(pitch.data, 1)\n",
-        "# _, roll_bpred = torch.max(roll.data, 1)\n",
-        "# Continuous predictions\n",
-        "yaw_predicted = softmax_temperature(yaw.data, 1)\n",
-        "pitch_predicted = softmax_temperature(pitch.data, 1)\n",
-        "roll_predicted = softmax_temperature(roll.data, 1)\n",
-        "yaw_predicted = torch.sum(yaw_predicted * idx_tensor, 1).cpu() * 3 - 99\n",
-        "pitch_predicted = torch.sum(pitch_predicted * idx_tensor, 1).cpu() * 3 - 99\n",
-        "roll_predicted = torch.sum(roll_predicted * idx_tensor, 1).cpu() * 3 - 99\n",
+        "\n",
+        "def y_p_r(img):\n",
+        "  input = transformations(img)\n",
+        "  yaw, pitch, roll = pos_net(input.unsqueeze(0))\n",
+        "  idx_tensor = torch.arange(66,dtype=torch.float)\n",
+        "  # _, yaw_bpred = torch.max(yaw.data, 1)\n",
+        "  # _, pitch_bpred = torch.max(pitch.data, 1)\n",
+        "  # _, roll_bpred = torch.max(roll.data, 1)\n",
+        "  # Continuous predictions\n",
+        "  yaw_predicted = softmax_temperature(yaw.data, 1)\n",
+        "  pitch_predicted = softmax_temperature(pitch.data, 1)\n",
+        "  roll_predicted = softmax_temperature(roll.data, 1)\n",
+        "  yaw_predicted = torch.sum(yaw_predicted * idx_tensor, 1).cpu() * 3 - 99\n",
+        "  pitch_predicted = torch.sum(pitch_predicted * idx_tensor, 1).cpu() * 3 - 99\n",
+        "  roll_predicted = torch.sum(roll_predicted * idx_tensor, 1).cpu() * 3 - 99\n",
+        "\n",
+        "  return yaw_predicted, pitch_predicted, roll_predicted\n",
         "\n",
         "\n",
-        "print(yaw_predicted, pitch_predicted, roll_predicted)"
+        "#print(yaw_predicted, pitch_predicted, roll_predicted)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vVILXBjJHui1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!rm -r Face_Feature/"
       ],
       "execution_count": null,
       "outputs": []
@@ -384,15 +456,13 @@
         "from os import listdir\n",
         "import random\n",
         "from IPython.utils import io\n",
-        "import tensorflow as tf\n",
         "\n",
-        "no_of_record_per_image = 3  ## NUMBER OF TIMES EVERY CELEBRITIES (DIFFERENT) IMAGES IS TO BE STORED\n",
+        "no_of_record_per_image = 20  ## NUMBER OF TIMES EVERY CELEBRITIES (DIFFERENT) IMAGES IS TO BE STORED\n",
         "face_feature = np.zeros((len(data_points)*no_of_record_per_image,4096)) ### ARRAY THAT WILL STORE THE FACE FEATURE\n",
         "if not(\"Face_Feature\" in os.listdir()): ### MAKING DIR\n",
         "    os.mkdir(\"Face_Feature\")\n",
         "    os.mkdir(\"Face_Feature/Faces\")\n",
         "index = 0\n",
-        "tf.compat.v1.logging.set_verbosity(tf.compat.v1.logging.ERROR)\n",
         "### EXTRACTING FACE FEATURE.\n",
         "for i in tqdm(range(len(data_points))):\n",
         "    for j in range(no_of_record_per_image):\n",
@@ -403,27 +473,25 @@
         "      except:\n",
         "        continue\n",
         "\n",
-        "      try:\n",
-        "          with io.capture_output() as captured:\n",
-        "            out = DeepFace.analyze(image_path, actions=['emotion'])\n",
-        "        \n",
-        "      except:\n",
-        "        continue\n",
-        "      \n",
-        "      if (out['dominant_emotion'] != 'neutral'):\n",
-        "        continue\n",
+        "      pos = face_locations(np.array(img), model='cnn')\n",
         "\n",
-        "      # pos = face_locations(np.array(img), model='cnn')\n",
+        "      if len(pos) == 0:\n",
+        "       continue   \n",
         "\n",
-        "      # if len(pos) == 0:\n",
-        "      #  continue   \n",
+        "      y, p, r = y_p_r(img)\n",
+        "\n",
+        "      #display(img)\n",
+        "      #print(y, p, r)\n",
+        "\n",
+        "      if not (-10 < y < 10) or not (-15 <= p <= 15):\n",
+        "        continue\n",
         "\n",
         "      encoding = face_encoder_model(transform_fe(img).unsqueeze_(0).to(device))\n",
         "      # face_feature[index] = encoding.cpu().detach().numpy()\n",
         "      face_feature[index,:] = encoding.cpu().detach().numpy()\n",
         "\n",
         "      # print(face_feature[index].sum())\n",
-        "      filename = data_points[i] + \"_\"  + str(j) + \".jpg\"\n",
+        "      filename = data_points[i] + \"_\"  + str(index) + \".jpg\"\n",
         "      path_save = join(\"Face_Feature/Faces\", filename)\n",
         "\n",
         "      img.save(path_save)\n",
@@ -462,8 +530,8 @@
       "source": [
         "# Save as in the repo\n",
         "\n",
-        "np.save(\"facefeature_save2.npy\",face_feature)\n",
-        "!cp facefeature_save2.npy /content/drive/My\\ Drive/Speech2Face/"
+        "#np.save(\"facefeature_save2.npy\",face_feature)\n",
+        "#!cp facefeature_save2.npy /content/drive/My\\ Drive/Speech2Face/"
       ],
       "execution_count": null,
       "outputs": []
@@ -479,9 +547,9 @@
         "# prova = np.load(\"Face_Feature/facefeature.npy\")\n",
         "# print(prova[3752].sum())\n",
         "\n",
-        "! zip -r face_features_neutral.zip Face_Feature/ \n",
-        "! cp face_features_neutral.zip /content/drive/My\\ Drive/Speech2Face/\n",
-        "! rm -r Face_Feature/"
+        "! zip -r face_features_v2.zip Face_Feature/ \n",
+        "! cp face_features_v2.zip /content/drive/My\\ Drive/Speech2Face/\n",
+        "#! rm -r Face_Feature/"
       ],
       "execution_count": null,
       "outputs": []
@@ -532,13 +600,39 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "SRYvTR-h9xIY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "rearrange_pictures()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1q-81xM59_Ap",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!cp /content/Face_Feature/facefeature.npy /content/Faces_rearranged"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "vSG9Uw_wQwy3",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "!zip -r preprocessed_faces_rearranged.zip /content/Faces_rearranged\n",
-        "!cp preprocessed_faces_rearranged.zip /content/drive/My\\ Drive/Speech2Face/"
+        "!zip -r face_features_v2_rearranged.zip /content/Faces_rearranged\n",
+        "!cp face_features_v2_rearranged.zip /content/drive/My\\ Drive/Speech2Face/"
       ],
       "execution_count": null,
       "outputs": []
