Fixes, now using gpu

--- a/face_processing.ipynb
+++ b/face_processing.ipynb
@@ -365,10 +365,11 @@
         "from dhp.code import hopenet\n",
         "import torchvision\n",
         "\n",
-        "saved_state_dict = torch.load('/content/hopenet_robust_alpha1.pkl', map_location=\"cpu\")\n",
+        "saved_state_dict = torch.load('/content/hopenet_robust_alpha1.pkl', map_location=\"cuda\")\n",
         "#print(saved_state_dict.keys())\n",
         "hopenet_model = hopenet.Hopenet(torchvision.models.resnet.Bottleneck, [3, 4, 6, 3], 66)\n",
         "hopenet_model.load_state_dict(saved_state_dict, strict=False)\n",
+        "hopenet_model.to(device)\n",
         "hopenet_model.eval()\n",
         "\n",
         "pos_net = hopenet_model"
@@ -409,8 +410,9 @@
         "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])])\n",
         "\n",
         "def y_p_r(img):\n",
-        "  input = transformations(img)\n",
+        "  input = transformations(img).to(device)\n",
         "  yaw, pitch, roll = pos_net(input.unsqueeze(0))\n",
+        "  yaw, pitch, roll = (yaw.cpu().detach(), pitch.cpu().detach(), roll.cpu().detach())\n",
         "  idx_tensor = torch.arange(66,dtype=torch.float)\n",
         "  # _, yaw_bpred = torch.max(yaw.data, 1)\n",
         "  # _, pitch_bpred = torch.max(pitch.data, 1)\n",
