--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -154,7 +154,6 @@
         "colab": {}
       },
       "source": [
-        "##################### DEPENDECIES ###########################\n",
         "class Vgg_face_dag(nn.Module):\n",
         "\n",
         "    def __init__(self):\n",
@@ -202,7 +201,6 @@
         "        self.fc8 = nn.Linear(in_features=4096, out_features=2622, bias=True)\n",
         "\n",
         "    def forward(self, x0, is_fc8=False):\n",
-        "      if not is_fc8:\n",
         "        x1 = self.conv1_1(x0)\n",
         "        x2 = self.relu1_1(x1)\n",
         "        x3 = self.conv1_2(x2)\n",
@@ -241,11 +239,11 @@
         "        x35 = self.fc7(x34)\n",
         "        x36 = self.relu7(x35)\n",
         "        x37 = self.dropout7(x36)\n",
-        "        x38 = x37\n",
-        "      else:\n",
-        "        x38 = self.fc8(x0)\n",
-        "\n",
-        "      return x38\n",
+        "        if is_fc8:\n",
+        "            x38 = self.fc8(x37)\n",
+        "        else:\n",
+        "            x38 = x37\n",
+        "        return x38\n",
         "\n",
         "\n",
         "def vgg_face_dag(weights_path=None, **kwargs):\n",
@@ -258,7 +256,7 @@
         "    if weights_path:\n",
         "        state_dict = torch.load(weights_path)\n",
         "        model.load_state_dict(state_dict)\n",
-        "    return model\n"
+        "    return model"
       ],
       "execution_count": null,
       "outputs": []
