--- a/face_processing.ipynb
+++ b/face_processing.ipynb
@@ -153,7 +153,6 @@
         "        self.fc8 = nn.Linear(in_features=4096, out_features=2622, bias=True)\n",
         "\n",
         "    def forward(self, x0, is_fc8=False):\n",
-        "      if not is_fc8:\n",
         "        x1 = self.conv1_1(x0)\n",
         "        x2 = self.relu1_1(x1)\n",
         "        x3 = self.conv1_2(x2)\n",
@@ -192,11 +191,11 @@
         "        x35 = self.fc7(x34)\n",
         "        x36 = self.relu7(x35)\n",
         "        x37 = self.dropout7(x36)\n",
-        "        x38 = x37\n",
-        "      else:\n",
-        "        x38 = self.fc8(x0)\n",
-        "\n",
-        "      return x38\n",
+        "        if is_fc8:\n",
+        "            x38 = self.fc8(x37)\n",
+        "        else:\n",
+        "            x38 = x37\n",
+        "        return x38\n",
         "\n",
         "\n",
         "def vgg_face_dag(weights_path=None, **kwargs):\n",
@@ -436,7 +435,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vVILXBjJHui1",
+        "id": "fSECbfWfNGIg",
         "colab_type": "code",
         "colab": {}
       },
@@ -457,10 +456,12 @@
         "from os.path import join\n",
         "from os import listdir\n",
         "import random\n",
-        "from IPython.utils import io\n",
+        "#from IPython.utils import io\n",
         "\n",
         "no_of_record_per_image = 20  ## NUMBER OF TIMES EVERY CELEBRITIES (DIFFERENT) IMAGES IS TO BE STORED\n",
         "face_feature = np.zeros((len(data_points)*no_of_record_per_image,4096)) ### ARRAY THAT WILL STORE THE FACE FEATURE\n",
+        "face_feature_fc8 = np.zeros((len(data_points)*no_of_record_per_image,2622)) ### ARRAY THAT WILL STORE THE FACE FEATURE\n",
+        "\n",
         "if not(\"Face_Feature\" in os.listdir()): ### MAKING DIR\n",
         "    os.mkdir(\"Face_Feature\")\n",
         "    os.mkdir(\"Face_Feature/Faces\")\n",
@@ -489,8 +490,10 @@
         "        continue\n",
         "\n",
         "      encoding = face_encoder_model(transform_fe(img).unsqueeze_(0).to(device))\n",
+        "      encoding_fc8 = face_encoder_model(transform_fe(img).unsqueeze_(0).to(device), is_fc8=True)\n",
         "      # face_feature[index] = encoding.cpu().detach().numpy()\n",
         "      face_feature[index,:] = encoding.cpu().detach().numpy()\n",
+        "      face_feature_fc8[index,:] = encoding_fc8.cpu().detach().numpy()\n",
         "\n",
         "      # print(face_feature[index].sum())\n",
         "      filename = data_points[i] + \"_\"  + str(index) + \".jpg\"\n",
@@ -502,6 +505,7 @@
         "      \n",
         "    \n",
         "np.save(\"Face_Feature/facefeature.npy\",face_feature[:index])\n",
+        "np.save(\"Face_Feature/facefeature_fc8.npy\",face_feature_fc8[:index])\n",
         "print(index)"
       ],
       "execution_count": null,
@@ -549,8 +553,8 @@
         "# prova = np.load(\"Face_Feature/facefeature.npy\")\n",
         "# print(prova[3752].sum())\n",
         "\n",
-        "! zip -r face_features_v2.zip Face_Feature/ \n",
-        "! cp face_features_v2.zip /content/drive/My\\ Drive/Speech2Face/\n",
+        "! zip -r face_features_hopenet.zip Face_Feature/ \n",
+        "! cp face_features_hopenet.zip /content/drive/My\\ Drive/Speech2Face/\n",
         "#! rm -r Face_Feature/"
       ],
       "execution_count": null,
