--- a/face_processing.ipynb
+++ b/face_processing.ipynb
@@ -11,8 +11,7 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -24,50 +23,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/antoniomuso/speech2face/blob/master/face_processing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "AOEtoMbdNYWA",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "! pip install openface\n",
-        "! pip3 install face_recognition\n",
-        "#! pip install deepface\n",
-        "\n",
-        "\n",
-        "\n",
-        "import glob\n",
-        "\n",
-        "import numpy as np\n",
-        "import sys\n",
-        "\n",
-        "from PIL import Image\n",
-        "from torch.utils.data import Dataset\n",
-        "from torch.utils.data import DataLoader\n",
-        "import  torchvision.transforms as transforms\n",
-        "from torchvision.datasets import ImageFolder\n",
-        "from face_recognition import face_landmarks, face_locations, face_encodings\n",
-        "from random import randint\n",
-        "\n",
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "import torch.nn.functional as F\n",
-        "from torch import optim\n",
-        "\n",
-        "import os\n",
-        "from os.path import join\n",
-        "\n",
-        "from tqdm import tqdm\n",
-        "from google.colab.patches import cv2_imshow\n",
-        "import cv2\n",
-        "#from deepface import DeepFace\n",
-        "import sys"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -86,14 +41,123 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b5rDKwE4EB_V",
+        "id": "omXh_0lnavT6",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# !rm -r Face_Feature/\n",
-        "# !rm -r Faces_rearranged/\n",
-        "# !rm face_features*.zip"
+        "! cp \"/content/drive/My Drive/Speech2Face/zippedFaces.tar.gz\" /content\n",
+        "! tar zxvf zippedFaces.tar.gz\n",
+        "! rm zippedFaces.tar.gz"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w59EDQVO8r6v",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "! pip install openface\n",
+        "! pip3 install face_recognition\n",
+        "\n",
+        "from face_recognition import face_landmarks, face_locations, face_encodings"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s9uk5jzR8x7j",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#! pip install deepface\n",
+        "#from deepface import DeepFace"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "76KnWmm09EJ0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Workspace cleanup\n",
+        "\n",
+        "! rm -r Face_Feature/\n",
+        "! rm -r Faces_rearranged/\n",
+        "! rm face_features*.zip "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AOEtoMbdNYWA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import glob\n",
+        "\n",
+        "import numpy as np\n",
+        "import sys\n",
+        "\n",
+        "from PIL import Image\n",
+        "from torch.utils.data import Dataset\n",
+        "from torch.utils.data import DataLoader\n",
+        "import  torchvision.transforms as transforms\n",
+        "from torchvision.datasets import ImageFolder\n",
+        "from random import randint\n",
+        "\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "from torch import optim\n",
+        "\n",
+        "import os\n",
+        "from os.path import join\n",
+        "from os import listdir\n",
+        "\n",
+        "from tqdm import tqdm\n",
+        "from google.colab.patches import cv2_imshow\n",
+        "import cv2\n",
+        "import sys\n",
+        "\n",
+        "import random"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TmqI6zWd9dLR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import os, sys\n",
+        "from IPython.utils import io\n",
+        "\n",
+        "class HiddenPrints:\n",
+        "    def __enter__(self):\n",
+        "        self._original_stdout = sys.stdout\n",
+        "        sys.stdout = open(os.devnull, 'w')\n",
+        "\n",
+        "    def __exit__(self, exc_type, exc_val, exc_tb):\n",
+        "        sys.stdout.close()\n",
+        "        sys.stdout = self._original_stdout"
       ],
       "execution_count": null,
       "outputs": []
@@ -242,26 +306,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "omXh_0lnavT6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        " ! cp \"/content/drive/My Drive/Speech2Face/zippedFaces.tar.gz\" /content\n",
-        " ! tar zxvf zippedFaces.tar.gz"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "MMEt6gSvOvSr",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "! rm zippedFaces.tar.gz\n",
         "datasetPath = 'unzippedFaces'\n",
         "base_dir='/content/drive/My Drive/Speech2Face/'\n",
         "data_points = os.listdir(datasetPath) ## GETTING DATA POINTS THAT IS NAME OF CELEBRTIES."
@@ -299,21 +348,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8MPKETMan0Uy",
+        "id": "rH6sRJBg9vvp",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "import os, sys\n",
-        "\n",
-        "class HiddenPrints:\n",
-        "    def __enter__(self):\n",
-        "        self._original_stdout = sys.stdout\n",
-        "        sys.stdout = open(os.devnull, 'w')\n",
-        "\n",
-        "    def __exit__(self, exc_type, exc_val, exc_tb):\n",
-        "        sys.stdout.close()\n",
-        "        sys.stdout = self._original_stdout"
+        "# Deep-head-pose-LITE cloning\n",
+        "! git clone https://github.com/OverEuro/deep-head-pose-lite.git\n",
+        "! mv deep-head-pose-lite dhpl"
       ],
       "execution_count": null,
       "outputs": []
@@ -326,8 +368,6 @@
         "colab": {}
       },
       "source": [
-        "! git clone https://github.com/OverEuro/deep-head-pose-lite.git\n",
-        "! mv deep-head-pose-lite dhpl\n",
         "from dhpl import stable_hopenetlite\n",
         "pos_net = stable_hopenetlite.shufflenet_v2_x1_0()\n",
         "saved_state_dict = torch.load('dhpl/model/shuff_epoch_120.pkl', map_location=\"cpu\")\n",
@@ -345,10 +385,10 @@
         "colab": {}
       },
       "source": [
-        "#!git clone https://github.com/natanielruiz/deep-head-pose.git\n",
-        "#!mv deep-head-pose/ dhp\n",
-        "\n",
-        "#!cp /content/drive/My\\ Drive/Speech2Face/hopenet_robust_alpha1.pkl ."
+        "# Deep-head-pose cloning\n",
+        "! git clone https://github.com/natanielruiz/deep-head-pose.git\n",
+        "! mv deep-head-pose/ dhp\n",
+        "! cp /content/drive/My\\ Drive/Speech2Face/hopenet_robust_alpha1.pkl ."
       ],
       "execution_count": null,
       "outputs": []
@@ -435,34 +475,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fSECbfWfNGIg",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "!rm -r Face_Feature/"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "JIytMAqvPKJT",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "from os.path import join\n",
-        "from os import listdir\n",
-        "import random\n",
-        "#from IPython.utils import io\n",
-        "\n",
         "no_of_record_per_image = 20  ## NUMBER OF TIMES EVERY CELEBRITIES (DIFFERENT) IMAGES IS TO BE STORED\n",
         "face_feature = np.zeros((len(data_points)*no_of_record_per_image,4096)) ### ARRAY THAT WILL STORE THE FACE FEATURE\n",
-        "face_feature_fc8 = np.zeros((len(data_points)*no_of_record_per_image,2622)) ### ARRAY THAT WILL STORE THE FACE FEATURE\n",
+        "face_feature_fc8 = np.zeros((len(data_points)*no_of_record_per_image,2622)) ### ARRAY THAT WILL STORE THE FACE FEATURE (fc8 layer)\n",
         "\n",
-        "if not(\"Face_Feature\" in os.listdir()): ### MAKING DIR\n",
+        "if not(\"Face_Feature\" in os.listdir()): \n",
         "    os.mkdir(\"Face_Feature\")\n",
         "    os.mkdir(\"Face_Feature/Faces\")\n",
         "index = 0\n",
@@ -529,22 +551,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "h8nWb1LMI5tL",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# Save as in the repo\n",
-        "\n",
-        "#np.save(\"facefeature_save2.npy\",face_feature)\n",
-        "#!cp facefeature_save2.npy /content/drive/My\\ Drive/Speech2Face/"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "-JT3mR-raCFz",
         "colab_type": "code",
         "colab": {}
@@ -556,21 +562,6 @@
         "! zip -r face_features_hopenet.zip Face_Feature/ \n",
         "! cp face_features_hopenet.zip /content/drive/My\\ Drive/Speech2Face/\n",
         "#! rm -r Face_Feature/"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UhHNdGGHQwKD",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "!cp /content/drive/My\\ Drive/Speech2Face/face_features_neutral_20.zip .\n",
-        "\n",
-        "!unzip face_features_neutral_20.zip"
       ],
       "execution_count": null,
       "outputs": []
@@ -598,19 +589,8 @@
         "    \n",
         "    if not os.path.exists(actor_folder):\n",
         "      os.makedirs(actor_folder)\n",
-        "    shutil.move(full_path, actor_folder)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SRYvTR-h9xIY",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
+        "    shutil.move(full_path, actor_folder)\n",
+        "\n",
         "rearrange_pictures()"
       ],
       "execution_count": null,
@@ -624,7 +604,8 @@
         "colab": {}
       },
       "source": [
-        "!cp /content/Face_Feature/facefeature.npy /content/Faces_rearranged"
+        "!cp /content/drive/My\\ Drive/Speech2Face/face_features_hopenet.zip . \n",
+        "!unzip face_features_hopenet.zip"
       ],
       "execution_count": null,
       "outputs": []
@@ -637,8 +618,11 @@
         "colab": {}
       },
       "source": [
-        "!zip -r face_features_v2_rearranged.zip /content/Faces_rearranged\n",
-        "!cp face_features_v2_rearranged.zip /content/drive/My\\ Drive/Speech2Face/"
+        "!cp /content/Face_Feature/facefeature.npy /content/Faces_rearranged\n",
+        "!cp /content/Face_Feature/facefeature_fc8.npy /content/Faces_rearranged\n",
+        "\n",
+        "!zip -r face_features_hopenet_rearranged.zip /content/Faces_rearranged\n",
+        "!cp face_features_hopenet_rearranged.zip /content/drive/My\\ Drive/Speech2Face/"
       ],
       "execution_count": null,
       "outputs": []
